--- a/cssCRVM.css
+++ b/cssCRVM.css
@@ -83,3 +83,12 @@ dl.codebox {
 dl.codebox.hidecode dd {
     padding: 10px;
 }
+.content-text div u {
+    text-transform: uppercase;
+    font-weight: 700;
+    text-decoration: none;
+    border-bottom: 2px solid var(--accent);
+}
+.content-text div strong, .content-text div b, .content-text div i {
+    color: var(--accent);
+}
