--- a/cssCRVM.css
+++ b/cssCRVM.css
@@ -392,17 +392,18 @@ fieldset {
     flex-wrap: wrap;
     gap: 5px;
 }
-fieldset > * > dt{
-    flex-grow:1;
+fieldset > * > dt {
+    flex-grow: 1;
     padding: 10px;
-    width: 100%!important;
+    width: 100% !important;
     border-bottom: var(--border);
     text-transform: uppercase;
-    font-weight: 800!important;
+    font-weight: 600 !important;
     background: var(--gradient);
     height: 40px;
-    max-height: 40px;
     box-sizing: border-box;
+    max-height: 40px;
+    font-size: .75rem !important;
 }
 fieldset > * {
     flex-grow: 1;
@@ -410,10 +411,12 @@ fieldset > * {
     flex-direction: column;
     margin: 0!important;
 }
-
+a.button1, input.button1, a.button2, input.button2, button.button2, .external-module .external-more a {
+    align-items: center;
+}
 fieldset > * > dt > * {
     font-weight: 600;
-    font-size: .8rem;
+    font-size: .75rem;
 }
 
 fieldset dd {
@@ -424,4 +427,7 @@ fieldset dd {
     width: 100% !important;
     box-sizing: border-box;
     margin: 0;
+}
+input[type="radio" i] {
+    accent-color: var(--accent);
 }
