--- a/cssCRVM.css
+++ b/cssCRVM.css
@@ -431,3 +431,70 @@ fieldset dd {
 input[type="radio" i] {
     accent-color: var(--accent);
 }
+table thead > *, table tbody > * {
+    display: grid;
+    grid-template-columns: auto 180px 150px;
+    gap: 5px;
+    grid-template-rows: 50px;
+}
+table th {
+    width: auto!important;
+    border: var(--border)!important;
+    background: var(--background-2);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: .6rem!important;
+}
+
+table tbody {
+    display: grid;
+    gap: 5px;
+    margin: 5px 0;
+}
+
+table tbody > * td {
+    border: var(--border)!important;
+    background: var(--background-2);
+    border-radius: var(--border-radius);
+    display: flex;
+    align-items: center;
+    padding: 0 20px!important;
+    text-transform: uppercase;
+    font-weight: 650!important;
+    font-size: .7rem!important;
+    color: var(--accent);
+}table thead > *, table tbody > * {
+    display: grid;
+    grid-template-columns: auto 180px 150px;
+    gap: 5px;
+    grid-template-rows: 50px;
+}
+table th {
+    width: auto!important;
+    border: var(--border)!important;
+    background: var(--background-2);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: .6rem!important;
+}
+
+table tbody {
+    display: grid;
+    gap: 5px;
+    margin: 5px 0;
+}
+
+table tbody > * td {
+    border: var(--border)!important;
+    background: var(--background-2);
+    border-radius: var(--border-radius);
+    display: flex;
+    align-items: center;
+    padding: 0 20px!important;
+    text-transform: uppercase;
+    font-weight: 650!important;
+    font-size: .7rem!important;
+    color: var(--accent);
+}
