--- a/cssCRVM.css
+++ b/cssCRVM.css
@@ -423,7 +423,7 @@ fieldset dd {
     margin: 0;
     padding: 15px;
 }
-#cp-main input:not([type="radio"],.button1, .button2) {
+#cp-main input:not([type="radio"],[type="checkbox"],.button1, .button2) {
     width: 100% !important;
     box-sizing: border-box;
     margin: 0;
@@ -537,4 +537,7 @@ div#cp-main .right-box {
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+table#memberlist td.posts {
+    align-items: center !important;
 }
