--- a/cssCRVM.css
+++ b/cssCRVM.css
@@ -684,3 +684,14 @@ li.see_all {
     color: var(--accent);
     opacity: .2;
 }
+/* enviar post template */
+div#postingbox .h3 {
+    border-bottom: var(--border);
+    margin: 0 -10px;
+    padding: 10px 15px;
+    margin-bottom: 10px;
+    background: var(--gradient);
+    font-weight: 500;
+    font-size: .7rem;
+    text-align: right;
+}
