--- a/cssCRVM.css
+++ b/cssCRVM.css
@@ -758,3 +758,12 @@ div#message-box > br {
 #postingbox .fields1 {
     padding-bottom: 10px;
 }
+div#smiley-box {
+    border-radius: var(--border-radius);
+    overflow: hidden;
+}
+div#smiley-box iframe {
+    width: 108%!important;
+    border-radius: var(--border-radius);
+    overflow: hidden;
+}
