--- a/cssCRVM.css
+++ b/cssCRVM.css
@@ -766,4 +766,20 @@ div#smiley-box iframe {
     width: 108%!important;
     border-radius: var(--border-radius);
     overflow: hidden;
+    height:100%;
+}
+div#smiley-box > .cjgrid > * {
+    border: var(--border);
+    background: var(--background-1);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: .65rem;
+    gap: 5px;
+    border-radius: var(--border-radius);
+    text-transform: uppercase;
+    padding: 0 10px;
+    text-align: center;
+    line-height: 100%;
+    font-weight: 600;
 }
