--- a/cssCRVM.css
+++ b/cssCRVM.css
@@ -909,7 +909,7 @@ div#postingbox .fields1 .button2 {
 }
 .content-text .content {font-size: .8rem;}
 a {text-decoration: none;}
-.sinbr br {display: none;}
+.sinbr > br {display: none;}
 a,a:visited {color: var(--accent);}
 ::-webkit-scrollbar {
     width: 12px !important;
